# nn_tilde

./: requirements_darwin_x64.txt
.github/workflows/: build.yaml
python_tools/: __init__.py  bending.py  callbacks.py  control.py  tracing.py  utils.py
python_tools/distributions/: utils.py
src/: CMakeLists.txt  otool_fix.sh
src/backend/: CMakeLists.txt
src/frontend/maxmsp/mc.nn_tilde/: CMakeLists.txt
src/frontend/maxmsp/mcs.nn_tilde/: CMakeLists.txt
src/frontend/maxmsp/nn.info/: CMakeLists.txt
src/frontend/maxmsp/nn_tilde/: CMakeLists.txt
src/frontend/maxmsp/shared/: max_model_download.h
src/frontend/puredata/nn_tilde/: CMakeLists.txt  nn_tilde.cpp
src/frontend/puredata/shared/: pd_model_download.h
src/shared/: model_download.h
